# template-library

./: .gitignore  CMakeLists.txt  README.md  template-library.pc.in
cmake_modules/: AddGMock.cmake  AddGTestTest.cmake  CodeCoverage.cmake
include/: templatepublicclass.h
src/: templateprivateclass.cpp  templateprivateclass.h  templatepublicclass.cpp
tests/: CMakeLists.txt  tst_library.cpp
